# tts-agent-harness

./: .dockerignore  .env.dev  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  TODO.md  fly.toml  requirements.txt  run.sh  spec.md  test.sh
 /: 0b3bfc5c-5616-4a14-a733-9e50d20857dc.jsonl  142da862-7dd0-4f70-adeb-9ca4aab5d577.jsonl  401dda7f-9c0c-4dec-9e75-6dd61ec466a7.jsonl  61ba7999-7842-4972-bd40-23da27d411eb.jsonl  785ba064-ffb1-413a-a385-b6f6911b00a4.jsonl  820bb33e-730a-4d26-914d-b04aa5390206.jsonl  91e9b78d-70bb-43fb-b28e-e063758704ff.jsonl  a9f2d699-b5c5-4280-a655-053e8ed81c0d.jsonl  aaac14f2-ffb8-45c5-b047-4ee76dfa9fb1.jsonl  b5136718-46ed-4ab0-9765-0c28b212e9c1.jsonl  d1ed764d-d141-4483-b813-c4c003e7e84a.jsonl
.harness/: config.json  rules.md  tts-known-issues.json
deploy/: Caddyfile  start.sh  supervisord.conf
docker/: .env.example  docker-compose.dev.yml
docs/: 015-error-handling-design.md  018-architecture-concurrency.md  019-deployment.md  README.md  architecture-concurrency.md  design-p5-subtitle-alignment.md  e2e-test-cases.md  setup.md  (+6 more)
server/: alembic.ini  pyproject.toml
server/api/: __init__.py  auth.py  deps.py  errors.py  main.py  sse.py
server/api/routes/: __init__.py  audio.py  episodes.py  health.py  keys.py
server/core/: __init__.py  asr_normalize.py  audio_utils.py  char_alignment.py  crypto.py  db.py  domain.py  export_logic.py  fish_client.py  groq_asr_client.py  p1_logic.py  p2v_scoring.py  p5_logic.py  repositories.py
server/flows/: retry_chunk.py  run_episode.py  worker_bootstrap.py
server/flows/tasks/: p1_chunk.py  p2_synth.py  p2c_check.py  p2v_verify.py  p3_transcribe.py  p5_subtitles.py  p6_concat.py
server/migrations/: env.py
server/migrations/versions/: V001_initial.py
server/tests/api/: test_routes.py  test_sse.py
server/tests/e2e/: __init__.py  conftest.py  test_chunk_operations.py  test_episode_crud.py  test_full_pipeline.py  test_live_http.py  test_new_endpoints.py  test_sse.py
server/tests/flows/: test_retry_chunk.py  test_run_episode.py
server/tests/tasks/: test_char_alignment.py  test_fish_client.py  test_p1_logic.py  test_p1_task.py  test_p2v_scoring.py  test_p2v_verify.py  test_p5_logic.py  test_p5_task.py
(+151 files in other folders)
