[project]
name = "tts-harness-server"
version = "0.1.0"
description = "TTS Agent Harness server (FastAPI + Prefect + SQLAlchemy)"
requires-python = ">=3.11"
readme = "README.md"

# Dependencies are frozen by ADR-002 §4.1. Later agents may extend this list
# via the ADR change process, not by drive-by edit.
dependencies = [
  "sqlalchemy[asyncio]>=2.0",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "aiosqlite>=0.19",
  "psycopg2-binary>=2.9",
  "pydantic>=2.6",
  "minio>=7.2",
  "prefect>=3",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "testcontainers[postgres,minio]>=4.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "api*", "flows*", "migrations*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "live: tests that hit real external services (FISH_TTS_KEY required); excluded by default",
  "e2e: end-to-end integration tests against dev-stack Postgres + MinIO",
]
